finished routing, views, logic behind and cleaned up some bugs

--- a/src/components/navigationbar/NavigationBar.css
+++ b/src/components/navigationbar/NavigationBar.css
@@ -1,15 +1,16 @@
 .navigationBarWrapper {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  background-color: rgb(163, 83, 83);
+  background-color: #333;
 }
 
 .login {
   grid-column: 9/10;
-  align-self: center;
 }
 
 .home,
 .login {
   cursor: pointer;
+  align-self: center;
+  color: #fff;
 }
